GizmoAPI: Mouse interacts with back-most widget instead of front-most one #94794

Closed
opened 2022-01-10 15:47:13 +01:00 by Demeter Dzadik · 9 comments
Member

System Information
Operating system: Linux-5.8.0-7642-generic-x86_64-with-glibc2.32 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.56

Blender Version
Broken: version: 3.1.0 Alpha, branch: master (modified), commit date: 2022-01-10 10:40, hash: 101fadcf6b

Short description of error
When drawing 3D widgets with the Gizmo/GizmoGroup API, the widget closest to the camera doesn't always seem to be selected.

Exact steps for others to reproduce the error

CC @ideasman42

**System Information** Operating system: Linux-5.8.0-7642-generic-x86_64-with-glibc2.32 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.56 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master (modified), commit date: 2022-01-10 10:40, hash: `101fadcf6b` **Short description of error** When drawing 3D widgets with the Gizmo/GizmoGroup API, the widget closest to the camera doesn't always seem to be selected. **Exact steps for others to reproduce the error** - Prototype addon: [bone-gizmos.zip](https://archive.blender.org/developer/F12812489/bone-gizmos.zip) - Minimal test file: [ellie_mesh_gizmos.rigging_minimal.blend](https://archive.blender.org/developer/F12798941/ellie_mesh_gizmos.rigging_minimal.blend) - Align multiple widgets in the camera and move the mouse to see that the front-most one isn't the one that gets highlighted: [widget_depth_picking-2022-01-10_14.53.04.mp4](https://archive.blender.org/developer/F12798949/widget_depth_picking-2022-01-10_14.53.04.mp4) CC @ideasman42
Author
Member

Added subscribers: @ideasman42, @Mets

Added subscribers: @ideasman42, @Mets

Added subscriber: @rwman

Added subscriber: @rwman

Could you please re upload bone_gizmos.zip - it contains a symlink to an add-on but no files.

Could you please re upload `bone_gizmos.zip` - it contains a symlink to an add-on but no files.
Author
Member

Whoops, how embarrassing! Fixed!

Whoops, how embarrassing! Fixed!
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm (though I think this has the same underlying reason as {#94792}?)

Can confirm (though I think this has the same underlying reason as {#94792}?)
Campbell Barton self-assigned this 2022-01-25 07:28:42 +01:00

This issue was referenced by 1758dcd423

This issue was referenced by 1758dcd42316448fec7609263ec32a26d8bc0673

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94794
No description provided.